# nlp-tir

./: README.md  pyproject.toml  test.py
nlp_tir/: datasets.py  setup.py
notebooks/: nlp_with_keras.ipynb  wptw.ipynb
notebooks/ita/: keras_intro.ipynb  nltk_preprocessing.ipynb  ntlk_sentiment_analysis.ipynb
scripts/: text_dependent_probability.py  word_comatrix.py
tests/: test_datasets.py
